added a delete function and a delete route for lead

--- a/views/landing.pug
+++ b/views/landing.pug
@@ -14,3 +14,7 @@ block content
         span #{lead.email}
          
         a(href="/lead/" + lead.id)  Details
+
+        
+//- look at the condition: if leads mean if the webpage is rendering this page and puts a value into the key 'leads', then this condition is true and it
+//- will render some things based on the command we have tasked it to do
