--- a/views/lead/edit_lead.pug
+++ b/views/lead/edit_lead.pug
@@ -4,3 +4,7 @@ block content
     form(action="/lead/" + lead.id + "/edit", method="POST")
         input(name="lead_email", type="email", placeholder="Enter your email address", value = lead.email)
         button(type="submit") Save
+    <br>
+    <br>
+    form(action="/lead/" + lead.id + "/delete", method="POST")
+        button(type="submit") Delete
