--- a/views/landing.pug
+++ b/views/landing.pug
@@ -10,11 +10,18 @@ block content
     h1 leads
     for lead in leads
       //- span is to tell the browser to put the following body inline with the span body
-      p 
+      p(id=lead.id)
         span #{lead.email}
          
         a(href="/lead/" + lead.id)  Details
+         
+        button(onclick=`deleteLead('${lead.id}')`) Delete
+  script(src='https://code.jquery.com/jquery-3.3.1.min.js')
+  script(src='/javascripts/leads.js')
+      //- LOOK AT THE BUTTON's FUNCTION. use `<javascript>` and '<pug variable>'
 
-        
 //- look at the condition: if leads mean if the webpage is rendering this page and puts a value into the key 'leads', then this condition is true and it
 //- will render some things based on the command we have tasked it to do
+
+//- on HTML/CSS/JS side: pug/JS are hierarchical in nature. if we delete the body corresponding to p(id=lead.id), we are effectively deleting all the
+//-     child bodies that are nested inside of p body.
