--- a/views/lead/edit_lead.pug
+++ b/views/lead/edit_lead.pug
@@ -1,10 +1,16 @@
-extends ../layout
-
-block content
-    form(action="/lead/" + lead.id + "/edit", method="POST")
-        input(name="lead_email", type="email", placeholder="Enter your email address", value = lead.email)
-        button(type="submit") Save
-    <br>
-    <br>
-    form(action="/lead/" + lead.id + "/delete", method="POST")
-        button(type="submit") Delete
+doctype html
+html(lang='en')
+    include ../common/header.pug
+    +header("Starter MVP")
+    body
+        form(action="/lead/" + lead.id + "/edit", method="POST")
+            input(name="lead_email", type="email", placeholder="Enter your email address", value = lead.email)
+            button(type="submit") Save
+        <br>
+        <br>
+        form(action="/lead/" + lead.id + "/delete", method="POST")
+            button(type="submit") Delete
+        
+        include common/footer.pug
+        +footer()
+    
