--- a/views/lead.pug
+++ b/views/lead.pug
@@ -1,8 +1,12 @@
-extends layout
-
-block content
+doctype html
+html(lang='en')
+  include common/header.pug
+  +header("Starter MVP")
+  body
     h1 Lead
     p 
         span #{lead.email}
          
         a(href="/lead/" + lead.id + "/edit") Edit
+    include common/footer.pug
+    +footer()
