install bootstrap and update the look of pages

--- a/views/lead/edit_lead.pug
+++ b/views/lead/edit_lead.pug
@@ -11,6 +11,6 @@ html(lang='en')
         form(action="/lead/" + lead.id + "/delete", method="POST")
             button(type="submit") Delete
         
-        include common/footer.pug
+        include ../common/footer.pug
         +footer()
     
