Improve pug layout and make it more portable

--- a/views/landing.pug
+++ b/views/landing.pug
@@ -3,61 +3,44 @@ html(lang='en')
   include common/header.pug
   +header("Starter MVP")
   body
-    include common/navbar.pug
-    +navbar()
-    .container
-      .row.align-items-center
-        .col-md-6.order-md-1.text-center.text-md-left.pr-md-5
-          h1.mb-3 Minimum Viable Landing Page
-          p.lead This tutorial teaches you how to build a NodeJS WebApp covering key topics
-          p.lead.mb-4 Learn how to launch a landing page and start collecting sales leads.
-              //- we have built a container that has a row. this row has a column of medium-sized screen of 6
-          form(action="/", method="POST")
-            .input-group.mb-3
-              input(name="lead_email", type="email", placeholder="Enter your email address").form-control
-              .input-group-append
-                button(type="submit").btn.btn-primary Get Started
-      //-form(action="/", method="POST")                We have deleted this part
-          input(name="lead_email", type="email", placeholder="Enter your email address")
-          button(type="submit") Submit
-      .row.align-items-center
-        .col-md-6
-          if leads
-            h1 leads
-            table.table
-              thread
-                tr
-                  th(scope="col") Email
-                  th(scope="col") Actions
-                  th(scope="col")
-                tr
-              tbody
-                for lead in leads
-                  tr(id=lead.id)
-                    td
-                      span #{lead.email}
-                    td
-                      a(href="/lead/" + lead.id) Details
-                    td
-                      button(onclick=`deleteLead('${lead.id}')`).btn.btn-primary Delete
-      //- Notice that tr(id=lead.id) element is instantiated with the id.
-          this is so that when we delete the element with that particular id, it will remove the entire row
-      
-      
-      //- Replaced these code into a table
-        for lead in leads
-          //- span is to tell the browser to put the following body inline with the span body
-          
-          p(id=lead.id)
-            span #{lead.email}
+    header
+      include common/navbar.pug
+      +navbar()
+      .container
+        .row.align-items-center
+          .col-md-6.order-md-1.text-center.text-md-left.pr-md-5
+            h1.mb-3 Minimum Viable Landing Page
+            p.lead This tutorial teaches you how to build a NodeJS WebApp covering key topics
+            p.lead.mb-4 Learn how to launch a landing page and start collecting sales leads.
+                //- we have built a container that has a row. this row has a column of medium-sized screen of 6
+            form(action="/", method="POST")
+              .input-group.mb-3
+                input(name="lead_email", type="email", placeholder="Enter your email address").form-control
+                .input-group-append
+                  button(type="submit").btn.btn-primary Get Started
+        //-form(action="/", method="POST")                We have deleted this part
+            input(name="lead_email", type="email", placeholder="Enter your email address")
+            button(type="submit") Submit
+
             
-            a(href="/lead/" + lead.id)  Details
+        //- Notice that tr(id=lead.id) element is instantiated with the id.
+            this is so that when we delete the element with that particular id, it will remove the entire row
+        
+        
+        //- Replaced these code into a table
+          for lead in leads
+            //- span is to tell the browser to put the following body inline with the span body
             
-            button(onclick=`deleteLead('${lead.id}')`) Delete
+            p(id=lead.id)
+              span #{lead.email}
+              
+              a(href="/lead/" + lead.id)  Details
+              
+              button(onclick=`deleteLead('${lead.id}')`) Delete
           
     include common/footer.pug
     +footer()
-    script(src='/javascripts/leads.js')
+    script(src="/javascripts/leads.js")
 
 
 
