--- a/views/users/signup.pug
+++ b/views/users/signup.pug
@@ -17,6 +17,10 @@ html(lang='en')
                     div.formgroup
                       label.small.mb-1.mt-3 Email: 
                       input(placeholder='Please enter your email',required=true, name='email',type='email',value='').form-control
+                      label.small.mb-1.mt-3 First Name: 
+                      input(placeholder='Please enter first name',required=true, name='firstName',type='text',value='').form-control
+                      label.small.mb-1.mt-3 Last Name: 
+                      input(placeholder='Please enter last name',required=true, name='lastName',type='text',value='').form-control
                       label.small.mb-1.mt-3 Password: 
                       input(placeholder='New Password',required=true, name='password', type='password',value='').form-control
                       button.mt-3.btn.btn-primary(type='submit') Sign up
