--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -10,20 +10,15 @@ mixin navbar(user)
             a.nav-link(href="/leads") Leads
       .navbar-right
         if user
-          span.navbar-text Hello #{user.email}!
-      .navbar-right
-        ul.navbar-nav.mr-auto
-          li.nav-item
-<<<<<<< HEAD
-            a.nav-link(href="/signup") Sign up
-          li.nav-item
-            a.nav-link(href="/login") Login
-          li.nav-item
-            a.nav-link(href="/logout") Logout
-=======
-            a.nav-link(href="/users/signup") Sign up
-          li.nav-item
-            a.nav-link(href="/users/login") Login
-          li.nav-item
-            a.nav-link(href="/users/logout") Logout
->>>>>>> 0ab21d0070f26f50789414261215cb10f081e0fe
+          ul.navbar-nav.mr-auto
+            span.navbar-text Hello #{user.firstName}!
+            li.nav-item
+              a.nav-link(href="/users/logout") Logout
+        else
+          .navbar-right
+            ul.navbar-nav.mr-auto
+              li.nav-item
+                a.nav-link(href="/users/signup") Sign up
+              li.nav-item
+                a.nav-link(href="/users/login") Login
+          
