--- a/views/users/signup.pug
+++ b/views/users/signup.pug
@@ -13,20 +13,24 @@ html(lang='en')
               h2.text-center Sign up!
               .row
                 .col-sm-12.col-md-12.col-xs-12
-<<<<<<< HEAD
-                  form(action='/signup', method='POST')
-=======
                   form(action='/users/signup', method='POST')
->>>>>>> 0ab21d0070f26f50789414261215cb10f081e0fe
                     div.formgroup
                       label.small.mb-1.mt-3 Email: 
-                      input(placeholder='Please enter your email',required=true, name='email',type='email',value='').form-control
+                      input(placeholder='Please enter your email',required=true, name='email',type='email',value=formData.email).form-control
+                      if (errors && errors.email)
+                        p.small.text-danger #{errors.email}
                       label.small.mb-1.mt-3 First Name: 
-                      input(placeholder='Please enter first name',required=true, name='firstName',type='text',value='').form-control
+                      input(placeholder='Please enter first name',required=true, name='firstName',type='text',value=formData.firstName).form-control
+                      if (errors && errors.firstName)
+                        p.small.text-danger #{errors.firstName}
                       label.small.mb-1.mt-3 Last Name: 
-                      input(placeholder='Please enter last name',required=true, name='lastName',type='text',value='').form-control
+                      input(placeholder='Please enter last name',required=true, name='lastName',type='text',value=formData.lastName).form-control
+                      if (errors && errors.lastName)
+                        p.small.text-danger #{errors.lastName}
                       label.small.mb-1.mt-3 Password: 
                       input(placeholder='New Password',required=true, name='password', type='password',value='').form-control
+                      if (errors && errors.password)
+                        p.small.text-danger #{errors.password}
                       button.mt-3.btn.btn-primary(type='submit') Sign up
                       p.mt-2.mb-0 
                         | Already have an account? #[a(href="/login") Log in here].
