--- a/views/users/signup.pug
+++ b/views/users/signup.pug
@@ -16,17 +16,21 @@ html(lang='en')
                   form(action='/users/signup', method='POST')
                     div.formgroup
                       label.small.mb-1.mt-3 Email: 
-                      input(placeholder='Please enter your email',required=true, name='email',type='email',value=formData.email).form-control
+                      input(placeholder='e.g. jem_ng@hotmail.com',required=true, name='email',type='email',value=formData.email).form-control
                       if (errors && errors.email)
                         p.small.text-danger #{errors.email}
                       label.small.mb-1.mt-3 First Name: 
-                      input(placeholder='Please enter first name',required=true, name='firstName',type='text',value=formData.firstName).form-control
+                      input(placeholder='e.g. Jeremy',required=true, name='firstName',type='text',value=formData.firstName).form-control
                       if (errors && errors.firstName)
                         p.small.text-danger #{errors.firstName}
                       label.small.mb-1.mt-3 Last Name: 
-                      input(placeholder='Please enter last name',required=true, name='lastName',type='text',value=formData.lastName).form-control
+                      input(placeholder='e.g. Ng',required=true, name='lastName',type='text',value=formData.lastName).form-control
                       if (errors && errors.lastName)
                         p.small.text-danger #{errors.lastName}
+                      label.small.mb-1.mt-3 Phone Number: 
+                      input(placeholder='e.g. 91234567',required=true, name='phoneNumber',type='text',value=formData.phoneNumber).form-control
+                      if (errors && errors.phoneNumber)
+                        p.small.text-danger #{errors.phoneNumber}
                       label.small.mb-1.mt-3 Password: 
                       input(placeholder='New Password',required=true, name='password', type='password',value='').form-control
                       if (errors && errors.password)
