Added more attributes to tables

--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -7,7 +7,7 @@ mixin navbar(user)
           li.nav-item
             a.nav-link(href="/") Home
           li.nav-item
-            a.nav-link(href="/leads") Leads
+            a.nav-link(href="/tickets") Tickets
       .navbar-right
         if user
           ul.navbar-nav.mr-auto
