--- a/views/landing.pug
+++ b/views/landing.pug
@@ -10,37 +10,37 @@ html(lang='en')
         .row.align-items-center
           .col-md-6.order-md-1.text-center.text-md-left.pr-md-5
             h1.mb-3 Minimum Viable Landing Page
-            p.lead This tutorial teaches you how to build a NodeJS WebApp covering key topics
-            p.lead.mb-4 Learn how to launch a landing page and start collecting sales leads.
+            p.ticket This tutorial teaches you how to build a NodeJS WebApp covering key topics
+            p.ticket.mb-4 Learn how to launch a landing page and start collecting sales tickets.
                 //- we have built a container that has a row. this row has a column of medium-sized screen of 6
             form(action="/", method="POST")
               .input-group.mb-3
-                input(name="lead_email", type="email", placeholder="Enter your email address").form-control
+                input(name="ticket_email", type="email", placeholder="Enter your email address").form-control
                 .input-group-append
                   button(type="submit").btn.btn-primary Get Started
         //-form(action="/", method="POST")                We have deleted this part
-            input(name="lead_email", type="email", placeholder="Enter your email address")
+            input(name="ticket_email", type="email", placeholder="Enter your email address")
             button(type="submit") Submit
 
             
-        //- Notice that tr(id=lead.id) element is instantiated with the id.
+        //- Notice that tr(id=ticket.id) element is instantiated with the id.
             this is so that when we delete the element with that particular id, it will remove the entire row
         
         
         //- Replaced these code into a table
-          for lead in leads
+          for ticket in tickets
             //- span is to tell the browser to put the following body inline with the span body
             
-            p(id=lead.id)
-              span #{lead.email}
+            p(id=ticket.id)
+              span #{ticket.email}
               
-              a(href="/lead/" + lead.id)  Details
+              a(href="/ticket/" + ticket.id)  Details
               
-              button(onclick=`deleteLead('${lead.id}')`) Delete
+              button(onclick=`deleteticket('${ticket.id}')`) Delete
           
     include common/footer.pug
     +footer()
-    script(src="/javascripts/leads.js")
+    script(src="/javascripts/tickets.js")
 
 
 
@@ -49,10 +49,10 @@ html(lang='en')
 
       //- LOOK AT THE BUTTON's FUNCTION. use `<javascript>` and '<pug variable>'
 
-//- look at the condition: if leads mean if the webpage is rendering this page and puts a value into the key 'leads', then this condition is true and it
+//- look at the condition: if tickets mean if the webpage is rendering this page and puts a value into the key 'tickets', then this condition is true and it
 //- will render some things based on the command we have tasked it to do
 
-//- on HTML/CSS/JS side: pug/JS are hierarchical in nature. if we delete the body corresponding to p(id=lead.id), we are effectively deleting all the
+//- on HTML/CSS/JS side: pug/JS are hierarchical in nature. if we delete the body corresponding to p(id=ticket.id), we are effectively deleting all the
 //-     child bodies that are nested inside of p body.
     
     Notice how we put header and footer at the top and body of the entire body
