--- a/views/ticket/edit_ticket.pug
+++ b/views/ticket/edit_ticket.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
   include ../common/header.pug
-  +header("Leads")
+  +header("Tickets")
   body
     header
       include ../common/navbar.pug
@@ -9,16 +9,16 @@ html(lang='en')
       .container
         .row.align-items-center
           .col-md-6.order-md-1.text-center.text-md-left.pr-md-5
-            h1 Edit Lead
+            h1 Edit ticket
             form(action="/", method="POST")
               .input-group.mb-3
-                input(name="lead_email", value=lead.email, type="email", placeholder="Enter your email address").form-control
+                input(name="ticket_email", value=ticket.email, type="email", placeholder="Enter your email address").form-control
                 .input-group-append
                   button(type="submit").btn.btn-primary Save
 
 
     include ../common/footer.pug
     +footer()
-    script(src="/javascripts/leads.js")
+    script(src="/javascripts/tickets.js")
 
 
