fixed the bug. finally able to push ticket data to database

--- a/views/landing.pug
+++ b/views/landing.pug
@@ -40,7 +40,7 @@ html(lang='en')
           
     include common/footer.pug
     +footer()
-    script(src="/javascripts/tickets.js")
+    //- script(src="/javascripts/tickets.js")
 
 
 
