--- a/views/ticket/edit_ticket.pug
+++ b/views/ticket/edit_ticket.pug
@@ -19,6 +19,6 @@ html(lang='en')
 
     include ../common/footer.pug
     +footer()
-    script(src="/javascripts/tickets.js")
+    //- script(src="../javascripts/tickets.js")
 
 
