--- a/views/ticket/tickets.pug
+++ b/views/ticket/tickets.pug
@@ -36,4 +36,4 @@ html(lang='en')
 
     include ../common/footer.pug
     +footer()
-    script(src="/javascripts/tickets.js")
+    //- script(src="/javascripts/tickets.js")
