--- a/views/ticket/ticket.pug
+++ b/views/ticket/ticket.pug
@@ -18,7 +18,6 @@ html(lang='en')
                 th(scope="col") Delete
               tr
               tbody
-<<<<<<< HEAD:views/ticket/ticket.pug
                 tr(id=ticket.id)
                 td
                   span #{ticket.email}
@@ -27,20 +26,10 @@ html(lang='en')
                 td
                   form(action="/ticket/" + ticket.id + "/delete", method="POST")
                     button(type="submit").btn.btn-primary Delete
-=======
-                  tr(id=ticket.id)
-                  td
-                    span #{ticket.email}
-                  td
-                    a(href="/ticket/" + ticket.id + "/edit") Edit
-                  td
-                    form(action="/ticket/" + ticket.id + "/delete", method="POST")
-                      button(type="submit").btn.btn-primary Delete
->>>>>>> origin/v1.1:views/ticket/ticket.pug
 
 
     include ../common/footer.pug
     +footer()
-    script(src="/javascripts/tickets.js")
+    script(src="../javascripts/tickets.js")
 
 
