Added association to user and tickets. Able to draw tickets based on administrative rights. admin is able to give responses and update database

--- a/views/users/login.pug
+++ b/views/users/login.pug
@@ -26,4 +26,4 @@ html(lang='en')
 											| Don't have an account? #[a(href="/signup") Sign up here].
 		include ../common/footer.pug
 		+footer()
-		script(src="/javascripts/leads.js")
+		//- script(src="/javascripts/leads.js")
