--- a/views/users/signup.pug
+++ b/views/users/signup.pug
@@ -41,4 +41,4 @@ html(lang='en')
           
     include ../common/footer.pug
     +footer()
-    script(src="/javascripts/leads.js")
+    //- script(src="/javascripts/leads.js")
