--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -1,7 +1,7 @@
 mixin navbar(user)
     nav.navbar.navbar-expand.navbar-light.bg-light
-      a(href="/", aria-label="Golden Goose").navbar-brand.mr-0.mr-md2
-        img(src="/images/golden-goose.jpg", width="36", height="36")
+      a(href="/", aria-label="Accenture Homepage").navbar-brand.mr-0.mr-md2
+        img(src="/images/accenture.png", width="36", height="36")
       .collapse.navbar-collapse
         ul.navbar-nav.mr-auto
           li.nav-item
