--- a/views/ticket/admin_2.pug
+++ b/views/ticket/admin_2.pug
@@ -11,6 +11,13 @@ html(lang='en')
         .row.align-items-center
           .col-md-10.order-md-1.text-center.text-md-left
             h1 tickets
+            p
+              span
+                a(href="/tickets/" + user.userId + "/0") Queued #{pre}
+                |          |
+                a(href="/tickets/" + user.userId + "/1") In-Progress #{pre}
+                |          |
+                a(href="/tickets/" + user.userId + "/2") Solved
             table.table
               thread
               tr
@@ -25,7 +32,7 @@ html(lang='en')
               tr
               tbody
               for ticket in tickets
-                if !ticket.tag
+                if (ticket.tag == 2)
                   //- display only if ticket status == 0 (queued)
                   tr(id=ticket.ticketId)
                     td
