Give users options to filter their tickets too

--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -9,7 +9,7 @@ mixin navbar(user)
           li.nav-item
             a.nav-link(href="/tickets") Tickets
           li.nav-item
-            a.nav-link(href="/ticket/user") Ask questions
+            a.nav-link(href="/ticket/form") Ask questions
       .navbar-right
         if user
           ul.navbar-nav.mr-auto
