--- a/views/ticket/admin_2.pug
+++ b/views/ticket/admin_2.pug
@@ -50,7 +50,7 @@ html(lang='en')
                     td
                       span #{ticket.responses}
                     td
-                      a(href="/ticket/" + ticket.ticketId + "/respond") Respond
+                      a(href="/ticket/" + user.userId + "/" + ticket.ticketId + "/respond") Respond
                   
 
 
