--- a/views/ticket/admin_1.pug
+++ b/views/ticket/admin_1.pug
@@ -10,7 +10,7 @@ html(lang='en')
       .container-fluid
         .row.align-items-center
           .col-md-10.order-md-1.text-center.text-md-left
-            h1 tickets
+            h1 tickets #{subtitle}
             p
               span
                 a(href="/tickets/" + user.userId + "/0") Queued #{pre}
