YAY postgres hosted on elephantSQL

--- a/views/users/signup.pug
+++ b/views/users/signup.pug
@@ -18,23 +18,23 @@ html(lang='en')
                       label.small.mb-1.mt-3 Email: 
                       input(placeholder='e.g. jem_ng@hotmail.com',required=true, name='email',type='email',value=formData.email).form-control
                       if (errors && errors.email)
-                        p.small.text-danger #{errors.email}
+                        p#err_email.small.text-danger #{errors.email}
                       label.small.mb-1.mt-3 First Name: 
                       input(placeholder='e.g. Jeremy',required=true, name='firstName',type='text',value=formData.firstName).form-control
                       if (errors && errors.firstName)
-                        p.small.text-danger #{errors.firstName}
+                        p#err_firstName.small.text-danger #{errors.firstName}
                       label.small.mb-1.mt-3 Last Name: 
                       input(placeholder='e.g. Ng',required=true, name='lastName',type='text',value=formData.lastName).form-control
                       if (errors && errors.lastName)
-                        p.small.text-danger #{errors.lastName}
+                        p#err_lastName.small.text-danger #{errors.lastName}
                       label.small.mb-1.mt-3 Phone Number: 
                       input(placeholder='e.g. 91234567',required=true, name='phoneNumber',type='text',value=formData.phoneNumber).form-control
                       if (errors && errors.phoneNumber)
-                        p.small.text-danger #{errors.phoneNumber}
+                        p#err_phoneNumber.small.text-danger #{errors.phoneNumber}
                       label.small.mb-1.mt-3 Password: 
                       input(placeholder='New Password',required=true, name='password', type='password',value='').form-control
                       if (errors && errors.password)
-                        p.small.text-danger #{errors.password}
+                        p#err_password.small.text-danger #{errors.password}
                       button.mt-3.btn.btn-primary(type='submit') Sign up
                       p.mt-2.mb-0 
                         | Already have an account? #[a(href="/login") Log in here].
