Added title values to all my pages and some test examples

--- a/views/ticket/respond_ticket.pug
+++ b/views/ticket/respond_ticket.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
   include ../common/header.pug
-  +header("Tickets")
+  +header(title)
   body
     header
       include ../common/navbar.pug
