--- a/views/welcome.pug
+++ b/views/welcome.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
   include common/header.pug
-  +header("ACNAPI Portal")
+  +header(title)
   body
     header
       include common/navbar.pug
