--- a/views/ticket/admin_1.pug
+++ b/views/ticket/admin_1.pug
@@ -2,7 +2,7 @@
 doctype html
 html(lang='en')
   include ../common/header.pug
-  +header("Tickets")
+  +header(title)
   body
     header
       include ../common/navbar.pug
