--- a/views/ticket/ticket_form.pug
+++ b/views/ticket/ticket_form.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
   include ../common/header.pug
-  +header("Tickets Form")
+  +header(title)
   body
     header
       include ../common/navbar.pug
