--- a/views/users/login.pug
+++ b/views/users/login.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
 	include ../common/header.pug
-	+header("Welcome to MVP")
+	+header(title)
 	body
 		header
 		include ../common/navbar.pug
