--- a/views/users/signup.pug
+++ b/views/users/signup.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
   include ../common/header.pug
-  +header("Registration Page")
+  +header(title)
   body
     header
       include ../common/navbar.pug
