--- a/views/ticket/user_2.pug
+++ b/views/ticket/user_2.pug
@@ -13,11 +13,11 @@ html(lang='en')
             h1 tickets
             p
               span
-                a(href="/my_tickets/" + user.userId + "/0") Queued #{pre}
+                a#tickets0(href="/my_tickets/" + user.userId + "/0") Queued #{pre}
                 |          |
-                a(href="/my_tickets/" + user.userId + "/1") In-Progress #{pre}
+                a#tickets1(href="/my_tickets/" + user.userId + "/1") In-Progress #{pre}
                 |          |
-                a(href="/my_tickets/" + user.userId + "/2") Solved
+                a#tickets2(href="/my_tickets/" + user.userId + "/2") Solved
             table.table
               thread
               tr
