--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -12,10 +12,16 @@ mixin navbar(user)
             a#btn_ticket-form.nav-link(href="/ticket/form") Ask questions
       .navbar-right
         if user
-          ul.navbar-nav.mr-auto
-            span#user_logged.navbar-text Hello #{user.firstName}!
-            li.nav-item
-              a#btn_logout.nav-link(href="/users/logout") Logout
+          if user.is_admin
+            ul.navbar-nav.mr-auto
+                span#user_logged.navbar-text Hello #{user.firstName} (ADMIN)!
+                li.nav-item
+                  a#btn_logout.nav-link(href="/users/logout") Logout
+          else
+            ul.navbar-nav.mr-auto
+              span#user_logged.navbar-text Hello #{user.firstName}!
+              li.nav-item
+                a#btn_logout.nav-link(href="/users/logout") Logout
         else
           .navbar-right
             ul.navbar-nav.mr-auto
